Complete refactor of the bot
- update dependencies
- collect all environment variables for ease of maintenance
- update slash commands